Bug 392698, ASSERTION: can't mark frame dirty during reflow, r+sr=roc, a=blocking1.9